test/tests/errors/error-if-exp-ref-off4.sm
// true
// false
// false
/**/
/**/

program {
    const x: int = true ? (true ? 1 : ref 1) : ref "";
}